--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
      <link rel="stylesheet" href="style.css" type="text/css" />
  </head>
  <body>
-     <h1> A World Of Deserts</h1>
+     <h1> A World Of Desserts</h1>
 <p>Welcome To The World Of Desserts</p>
      
    
   <h1>Im Going To List My Favorite Desserts</h1>  
+
+<img src="dess.jpg">
    
 <ul>
     <li>Icecream</li>
-    <li>Frozen Yogurt</li>
+    <li>Slushies</li>
     <li>Cupcakes</li>
     
 </ul>
@@ -25,9 +27,35 @@
 
 A cupcake is a small cake designed to serve one person, which may be baked in a small thin paper or aluminum cup. As with larger cakes, icing and other cake decorations such as fruit and candy may be applied.
 
+
+<p>The First Sweets - Who Invented First Candy. Cave man made candy out of honey by drying it and forming a taffy-like concoction to satisfy their sweet tooth. It is believed that Indians were the first to use the sweet juice of sugarcane about 3000 years ago and that they were the first to make brown sugar</p>
+<p>Desserts is a course that concludes a meal. ... The term dessert can apply to many confections, such as biscuits, cakes, cookies, custards, gelatins, ice creams, pastries, pies, puddings, and sweet soups, and tarts.</p>
+<p>Dessert is a course that concludes a meal. The course usually consists of sweet foods, such as confections dishes or fruit, and possibly a beverage such as dessert wine or liqueur, however in the United States it may include coffee, cheeses, nuts, or other savory items regarded as a separate course elsewhere</p>
+ <p>Dessert is a happy food, and they lighten anyone's mood. ... You don't need a reason to eat desserts and no particular occasion to consume it. It's enough to feed our soul and taste a little bit of heaven on earth. People eat sweets simply because they want some sugar and sugar is an excellent source of energy.</p>
+
+<h1>Some Special Information</h1>
+
+<ul>
+
+<li>How often have you been made to feel guilty about indulging your sweet tooth for “no apparent reason” by the health freaks around you? Endless lectures on how dessert should be eaten in moderation or not at all seem to echo in our ears every time we’re spotted nibbling on our favorite sweetmeats.</li>    
+<li>While we don’t really need a reason to eat desserts, there are some who wonder in amazement why we’re being kind to ourselves ever so frequently without a proper reason. For connoisseurs of desserts, however, it doesn’t matter what the occasion or the time of the year it is. Rather, it is all about feeding the soul with food that makes them feel like they’ve finally found Heaven on earth.</li>    
+<li>If you’re one of those “healthy” people who crave chocolates, smores, and strawberry shortcakes, but feel guilty at the mere confession of the cravings, we’ve got some good news for you.
+Eating dessert does not mean you have little or no self-control. It only means that you have a good sense of what you want (sometimes it is just a sinful blueberry cheesecake), and that you have what it takes to honor these cravings.</li>    
+</ul>
+
+
+
+
+
+
+
+
+
+
 <img src="cake.jpg"></img>
 <img src="slushiess.jpg"></img>
 <img src="cupcake.jpg"></img>
+</html>
 
 
 
